// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-ChevronIcon lucid-ChevronIcon-is-down"
>
  <path
    d="M.5 4.5l7.5 7 7.5-7"
  />
</Icon>
`;

exports[`ChevronIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-ChevronIcon lucid-ChevronIcon-is-up"
>
  <path
    d="M.5 4.5l7.5 7 7.5-7"
  />
</Icon>
`;

exports[`ChevronIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-ChevronIcon lucid-ChevronIcon-is-down"
>
  <path
    d="M.5 4.5l7.5 7 7.5-7"
  />
</Icon>
`;

exports[`ChevronIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-ChevronIcon lucid-ChevronIcon-is-left"
>
  <path
    d="M.5 4.5l7.5 7 7.5-7"
  />
</Icon>
`;

exports[`ChevronIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-ChevronIcon lucid-ChevronIcon-is-right"
>
  <path
    d="M.5 4.5l7.5 7 7.5-7"
  />
</Icon>
`;
